--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       # sets up .NET Core SDK 6.0.x
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1
-        with:
-          dotnet-version: 7.0.0
+        # with:
+        #   dotnet-version: 7.0.0
       # Install dotnet wasm buildtools workload
       - name: Install .NET WASM Build Tools
         run: dotnet workload install wasm-tools
